// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Chord Progression test suite should generate chords based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 960,
    "time": 0,
  },
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 480,
    "time": 960,
  },
  Object {
    "chord": Array [
      73,
      78,
      80,
    ],
    "chordName": "C#sus4",
    "dur": 960,
    "time": 1440,
  },
  Object {
    "chord": Array [
      73,
      78,
      80,
    ],
    "chordName": "C#sus4",
    "dur": 480,
    "time": 2400,
  },
  Object {
    "chord": Array [
      64,
      68,
      71,
    ],
    "chordName": "E7",
    "dur": 640,
    "time": 2880,
  },
  Object {
    "chord": Array [
      64,
      68,
      71,
    ],
    "chordName": "E7",
    "dur": 320,
    "time": 3520,
  },
  Object {
    "chord": Array [
      63,
      66,
      68,
      72,
    ],
    "chordName": "G#7",
    "dur": 480,
    "time": 3840,
  },
  Object {
    "chord": Array [
      63,
      66,
      68,
      72,
    ],
    "chordName": "G#7",
    "dur": 960,
    "time": 4320,
  },
  Object {
    "chord": Array [
      61,
      66,
      71,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "time": 5280,
  },
  Object {
    "chord": Array [
      61,
      66,
      71,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "time": 5760,
  },
  Object {
    "chord": Array [
      61,
      66,
      71,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "time": 6240,
  },
  Object {
    "chord": Array [
      64,
      75,
      68,
      71,
    ],
    "chordName": "EM7",
    "dur": 960,
    "time": 6720,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - prudent style 1`] = `
Array [
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 960,
    "time": 0,
  },
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 480,
    "time": 960,
  },
  Object {
    "chord": Array [
      73,
      78,
      80,
    ],
    "chordName": "C#sus4",
    "dur": 960,
    "time": 1440,
  },
  Object {
    "chord": Array [
      73,
      78,
      80,
    ],
    "chordName": "C#sus4",
    "dur": 480,
    "time": 2400,
  },
  Object {
    "chord": Array [
      64,
      68,
      71,
    ],
    "chordName": "E7",
    "dur": 640,
    "time": 2880,
  },
  Object {
    "chord": Array [
      64,
      68,
      71,
    ],
    "chordName": "E7",
    "dur": 320,
    "time": 3520,
  },
  Object {
    "chord": Array [
      63,
      66,
      68,
      72,
    ],
    "chordName": "G#7",
    "dur": 480,
    "time": 3840,
  },
  Object {
    "chord": Array [
      63,
      66,
      68,
      72,
    ],
    "chordName": "G#7",
    "dur": 960,
    "time": 4320,
  },
  Object {
    "chord": Array [
      61,
      66,
      71,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "time": 5280,
  },
  Object {
    "chord": Array [
      61,
      66,
      71,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "time": 5760,
  },
  Object {
    "chord": Array [
      61,
      66,
      71,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "time": 6240,
  },
  Object {
    "chord": Array [
      64,
      75,
      68,
      71,
    ],
    "chordName": "EM7",
    "dur": 960,
    "time": 6720,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 320,
    "time": 0,
  },
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 480,
    "time": 320,
  },
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 320,
    "time": 800,
  },
  Object {
    "chord": Array [
      71,
      74,
      78,
    ],
    "chordName": "Bm",
    "dur": 320,
    "time": 1120,
  },
  Object {
    "chord": Array [
      73,
      76,
      80,
    ],
    "chordName": "C#m",
    "dur": 320,
    "time": 1440,
  },
  Object {
    "chord": Array [
      73,
      76,
      80,
    ],
    "chordName": "C#m",
    "dur": 480,
    "time": 1760,
  },
  Object {
    "chord": Array [
      73,
      76,
      80,
    ],
    "chordName": "C#m",
    "dur": 320,
    "time": 2240,
  },
  Object {
    "chord": Array [
      73,
      76,
      80,
    ],
    "chordName": "C#m",
    "dur": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      71,
      76,
      81,
    ],
    "chordName": "Esus4",
    "dur": 240,
    "time": 2880,
  },
  Object {
    "chord": Array [
      71,
      76,
      81,
    ],
    "chordName": "Esus4",
    "dur": 240,
    "time": 3120,
  },
  Object {
    "chord": Array [
      71,
      76,
      81,
    ],
    "chordName": "Esus4",
    "dur": 480,
    "time": 3360,
  },
  Object {
    "chord": Array [
      72,
      75,
      78,
      80,
    ],
    "chordName": "G#7",
    "dur": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      72,
      75,
      78,
      80,
    ],
    "chordName": "G#7",
    "dur": 480,
    "time": 4160,
  },
  Object {
    "chord": Array [
      72,
      75,
      78,
      80,
    ],
    "chordName": "G#7",
    "dur": 320,
    "time": 4640,
  },
  Object {
    "chord": Array [
      72,
      75,
      78,
      80,
    ],
    "chordName": "G#7",
    "dur": 320,
    "time": 4960,
  },
  Object {
    "chord": Array [
      71,
      75,
      78,
      81,
    ],
    "chordName": "B7",
    "dur": 320,
    "time": 5280,
  },
  Object {
    "chord": Array [
      71,
      75,
      78,
      81,
    ],
    "chordName": "B7",
    "dur": 480,
    "time": 5600,
  },
  Object {
    "chord": Array [
      71,
      75,
      78,
      81,
    ],
    "chordName": "B7",
    "dur": 320,
    "time": 6080,
  },
  Object {
    "chord": Array [
      71,
      75,
      78,
      81,
    ],
    "chordName": "B7",
    "dur": 320,
    "time": 6400,
  },
  Object {
    "chord": Array [
      64,
      75,
      78,
      85,
    ],
    "chordName": "EM13",
    "dur": 240,
    "time": 6720,
  },
  Object {
    "chord": Array [
      64,
      75,
      78,
      85,
    ],
    "chordName": "EM13",
    "dur": 240,
    "time": 6960,
  },
  Object {
    "chord": Array [
      64,
      75,
      78,
      85,
    ],
    "chordName": "EM13",
    "dur": 480,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "chord": Array [
      63,
      66,
      70,
      72,
    ],
    "chordName": "Ebm6",
    "dur": 480,
    "time": 0,
  },
  Object {
    "chord": Array [
      63,
      66,
      70,
      72,
    ],
    "chordName": "Ebm6",
    "dur": 320,
    "time": 480,
  },
  Object {
    "chord": Array [
      63,
      66,
      70,
      72,
    ],
    "chordName": "Ebm6",
    "dur": 320,
    "time": 800,
  },
  Object {
    "chord": Array [
      63,
      66,
      70,
      72,
    ],
    "chordName": "Ebm6",
    "dur": 320,
    "time": 1120,
  },
  Object {
    "chord": Array [
      73,
      80,
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 1440,
  },
  Object {
    "chord": Array [
      73,
      80,
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 1760,
  },
  Object {
    "chord": Array [
      73,
      80,
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 2080,
  },
  Object {
    "chord": Array [
      73,
      80,
    ],
    "chordName": "Dbm6",
    "dur": 480,
    "time": 2400,
  },
  Object {
    "chord": Array [
      82,
      88,
    ],
    "chordName": "Bbdimadd6",
    "dur": 320,
    "time": 2880,
  },
  Object {
    "chord": Array [
      82,
      88,
    ],
    "chordName": "Bbdimadd6",
    "dur": 320,
    "time": 3200,
  },
  Object {
    "chord": Array [
      82,
      88,
    ],
    "chordName": "Bbdimadd6",
    "dur": 320,
    "time": 3520,
  },
  Object {
    "chord": Array [
      80,
      82,
      85,
      88,
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      80,
      82,
      85,
      88,
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 4160,
  },
  Object {
    "chord": Array [
      80,
      82,
      85,
      88,
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 4480,
  },
  Object {
    "chord": Array [
      80,
      82,
      85,
      88,
    ],
    "chordName": "Dbm6",
    "dur": 480,
    "time": 4800,
  },
  Object {
    "chord": Array [
      76,
      83,
      80,
    ],
    "chordName": "E6",
    "dur": 320,
    "time": 5280,
  },
  Object {
    "chord": Array [
      76,
      83,
      80,
    ],
    "chordName": "E6",
    "dur": 320,
    "time": 5600,
  },
  Object {
    "chord": Array [
      76,
      83,
      80,
    ],
    "chordName": "E6",
    "dur": 320,
    "time": 5920,
  },
  Object {
    "chord": Array [
      76,
      83,
      80,
    ],
    "chordName": "E6",
    "dur": 480,
    "time": 6240,
  },
  Object {
    "chord": Array [
      73,
      76,
      78,
      81,
    ],
    "chordName": "A6",
    "dur": 320,
    "time": 6720,
  },
  Object {
    "chord": Array [
      73,
      76,
      78,
      81,
    ],
    "chordName": "A6",
    "dur": 320,
    "time": 7040,
  },
  Object {
    "chord": Array [
      73,
      76,
      78,
      81,
    ],
    "chordName": "A6",
    "dur": 320,
    "time": 7360,
  },
]
`;
